@@ -1,6 +1,10 @@
 package Pry_01.Web.de.Ventas.de.Computadoras.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import Pry_01.Web.de.Ventas.de.Computadoras.Dto.ProductosDTO.ProductosCreateDTO;
 import Pry_01.Web.de.Ventas.de.Computadoras.Dto.ProductosDTO.ProductosResponseDTO;
@@ -22,9 +26,17 @@ public class ProductoService {
     }
 
     public List<ProductosResponseDTO> listarProducto() {
-        return productoRepository.findAll().stream()
+        List<ProductoModel> productos = productoRepository.findAll();
+
+        return productos.stream()
                 .map(this::convertToResponseDTO)
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public Page<ProductosResponseDTO> listarPorCategoria(CategoriaModel categoria, Pageable pageable) {
+        Page<ProductoModel> productosPage = productoRepository.findByCategoriaId(categoria, pageable);
+
+        return productosPage.map(this::convertToResponseDTO);
     }
 
     public ProductoModel guardarProducto(ProductosCreateDTO dto) {
@@ -63,7 +75,8 @@ public class ProductoService {
                 .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
         return convertToResponseDTO(producto);
     }
-      private ProductosResponseDTO convertToResponseDTO(ProductoModel producto) {
+
+    private ProductosResponseDTO convertToResponseDTO(ProductoModel producto) {
         return new ProductosResponseDTO(
                 producto.getId(),
                 producto.getName(),
@@ -73,9 +86,10 @@ public class ProductoService {
                 producto.getStock(),
                 producto.getCategoriaId().getName());
     }
+
     public ProductoModel obtenerPorId(Long id) {
-    return productoRepository.findById(id)
-            .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
+        return productoRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
     }
 
 }
